@@ -1,0 +1,9 @@
+package net.ethermod.blackether.items;
+
+import net.minecraft.world.item.Item;
+
+public class EtherIngot extends Item {
+    public EtherIngot(Properties properties) {
+        super(properties);
+    }
+}
