@@ -1,7 +1,7 @@
-package net.ethermod.blackether.items.gen.impl;
+package net.ethermod.blackether.recipes.impl;
 
-import net.ethermod.blackether.items.OnyxAxe;
-import net.ethermod.blackether.items.gen.core.ItemRecipeBuilder;
+import net.ethermod.blackether.items.OnyxApple;
+import net.ethermod.blackether.recipes.core.ItemRecipeBuilder;
 import net.ethermod.blackether.registries.ItemRegistry;
 import net.ethermod.blackether.utils.Naming;
 import net.minecraft.data.recipes.FinishedRecipe;
@@ -16,19 +16,20 @@ import java.util.function.Consumer;
 import static net.ethermod.blackether.BlackEtherMod.MOD_ID;
 import static net.minecraft.data.recipes.RecipeProvider.*;
 
-public class OnyxAxeRecipe implements ItemRecipeBuilder {
-    public void build(Consumer<FinishedRecipe> exporter) {
-        OnyxAxe axe = (OnyxAxe) ItemRegistry.getInstance().getItem(Naming.ONYX_AXE);
-        Item onyxOre = ItemRegistry.getInstance().getItem(Naming.ONYX_ORE);
+public class OnyxAppleRecipe implements ItemRecipeBuilder {
 
-        ShapedRecipeBuilder.shaped(RecipeCategory.TOOLS, axe)
-                .pattern("XX ")
-                .pattern("XS ")
-                .pattern(" S ")
+    @Override
+    public void build(Consumer<FinishedRecipe> exporter) {
+        OnyxApple apple = (OnyxApple) ItemRegistry.getInstance().getItem(Naming.ONYX_APPLE);
+        Item onyxOre = ItemRegistry.getInstance().getItem(Naming.ONYX_ORE);
+        ShapedRecipeBuilder.shaped(RecipeCategory.TOOLS, apple)
+                .pattern("XXX")
+                .pattern("XSX")
+                .pattern("XXX")
                 .define('X', onyxOre)
-                .define('S', Items.STICK)
+                .define('S', Items.APPLE)
                 .unlockedBy(getHasName(onyxOre), has(onyxOre))
-                .unlockedBy(getHasName(Items.STICK), has(Items.STICK))
-                .save(exporter, new ResourceLocation(MOD_ID, getSimpleRecipeName(axe)));
+                .unlockedBy(getHasName(apple), has(apple))
+                .save(exporter, new ResourceLocation(MOD_ID, getSimpleRecipeName(apple)));
     }
 }
