@@ -1,7 +1,7 @@
-package net.ethermod.blackether.items.gen.impl;
+package net.ethermod.blackether.recipes.impl;
 
-import net.ethermod.blackether.items.OnyxApple;
-import net.ethermod.blackether.items.gen.core.ItemRecipeBuilder;
+import net.ethermod.blackether.items.OnyxShovel;
+import net.ethermod.blackether.recipes.core.ItemRecipeBuilder;
 import net.ethermod.blackether.registries.ItemRegistry;
 import net.ethermod.blackether.utils.Naming;
 import net.minecraft.data.recipes.FinishedRecipe;
@@ -16,20 +16,20 @@ import java.util.function.Consumer;
 import static net.ethermod.blackether.BlackEtherMod.MOD_ID;
 import static net.minecraft.data.recipes.RecipeProvider.*;
 
-public class OnyxAppleRecipe implements ItemRecipeBuilder {
+public class OnyxShovelRecipe implements ItemRecipeBuilder {
 
-    @Override
     public void build(Consumer<FinishedRecipe> exporter) {
-        OnyxApple apple = (OnyxApple) ItemRegistry.getInstance().getItem(Naming.ONYX_APPLE);
+        OnyxShovel shovel = (OnyxShovel) ItemRegistry.getInstance().getItem(Naming.ONYX_SHOVEL);
         Item onyxOre = ItemRegistry.getInstance().getItem(Naming.ONYX_ORE);
-        ShapedRecipeBuilder.shaped(RecipeCategory.TOOLS, apple)
-                .pattern("XXX")
-                .pattern("XSX")
-                .pattern("XXX")
+        ShapedRecipeBuilder.shaped(RecipeCategory.TOOLS, shovel)
+                .pattern(" X ")
+                .pattern(" S ")
+                .pattern(" S ")
                 .define('X', onyxOre)
-                .define('S', Items.APPLE)
+                .define('S', Items.STICK)
                 .unlockedBy(getHasName(onyxOre), has(onyxOre))
-                .unlockedBy(getHasName(apple), has(apple))
-                .save(exporter, new ResourceLocation(MOD_ID, getSimpleRecipeName(apple)));
+                .unlockedBy(getHasName(Items.STICK), has(Items.STICK))
+                .save(exporter, new ResourceLocation(MOD_ID, getSimpleRecipeName(shovel)));
     }
+
 }
