@@ -1,13 +1,13 @@
-package net.ethermod.blackether.items.gen.impl;
+package net.ethermod.blackether.recipes.impl;
 
-import net.ethermod.blackether.items.gen.core.ItemRecipeBuilder;
-import net.ethermod.blackether.registries.ItemRegistry;
+import net.ethermod.blackether.recipes.core.ItemRecipeBuilder;
+import net.ethermod.blackether.registries.BlockRegistry;
 import net.ethermod.blackether.utils.Naming;
 import net.minecraft.data.recipes.FinishedRecipe;
 import net.minecraft.data.recipes.RecipeCategory;
 import net.minecraft.data.recipes.ShapedRecipeBuilder;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.block.Block;
 
 import java.util.function.Consumer;
 
@@ -16,7 +16,7 @@ import static net.minecraft.data.recipes.RecipeProvider.has;
 public class StickRecipe implements ItemRecipeBuilder {
     @Override
     public void build(Consumer<FinishedRecipe> exporter) {
-        Item planks = ItemRegistry.getInstance().getItem(Naming.ONYXWOOD_PLANKS);
+        Block planks = BlockRegistry.getInstance().getBlock(Naming.ONYXWOOD_PLANKS);
         ShapedRecipeBuilder
                 .shaped(RecipeCategory.MISC, Items.STICK, 4)
                 .define('#', planks).pattern("#")
